# astrology-api-client-example

./: README.md
cloudflare-worker/: README.md  config.js  index.js  package-lock.json  package.json  wrangler.toml
cloudflare-worker/src/: error.js  index.js  token.js
cloudflare-worker/src/middleware/: cors.js  credits.js  endpoint.js  jwt.js  pdf-download.js  ratelimit.js  shopify.js
csharp/: ProkeralaApiClient.cs  ProkeralaApiClient.csproj  ProkeralaApiClient.sln
javascript/: README.md  client.js  package-lock.json  package.json  test.js
javascript/.npm/: fixup  tsconfig-cjs.json  tsconfig.json
php/: README.md  client.php  test.php
python/: .gitignore  LICENSE  README.md  client.py  pyproject.toml  test.py
python/example/: README.md  kundli.py  requirements.txt  template.html.j2
python/src/prokerala_api/: __init__.py  example.py
ruby/: README.md  client.rb  test.rb
